# daily_rotation_logs_rs

./: README.md
daily_rotation_logs/: Cargo.toml  README.md
daily_rotation_logs/logs/: my_app.log.2025-05-29
daily_rotation_logs/src/: logger.rs  main.rs
