[package]
name = "daily_rotation_logs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "time", "chrono", "env-filter"] }
tokio = {version = "1.45.1", features = ["full"]}
